# doc/openapi.yaml
@@ -634,6 +634,18 @@ paths:
           required: true
           schema:
             type: string
+        - $ref: '#/components/parameters/ValidOnlyQuery'
+        - $ref: '#/components/parameters/LimitQuery'
+        - $ref: '#/components/parameters/OffsetQuery'
+        - name: site
+          in: query
+          description: |
+            部位による絞り込み
+            * `upper` - 上顎
+            * `lower` - 下顎
+          schema:
+            type: string
+            enum: [upper, lower]
       responses:
         '200':
           description: 正常終了
@@ -650,10 +662,11 @@ paths:
       parameters:
         - name: q
           in: query
-          description: 検索キーワード
+          description: 歯式コード (6桁)
           required: true
           schema:
             type: string
+        - $ref: '#/components/parameters/ValidOnlyQuery'
       responses:
         '200':
           description: 正常終了
@@ -1858,12 +1871,30 @@ components:
       type: object
       description: 歯式マスターの情報。
       properties:
+        id:
+          type: integer
+          description: データベース内のシステムID
+        update_category:
+          type: string
+          description: "1: 変更区分 (0:無変更, 1:抹消, 3:新規, 5:変更, 9:廃止)"
+        master_type:
+          type: string
+          description: "2: マスター種別 ('F'固定: 歯式マスター)"
         code:
           type: string
           description: "3: 歯式コード (6桁)"
+        reserved:
+          type: string
+          description: "4: 予備"
         name:
           type: string
           description: "5: 歯式名称"
+        update_date:
+          type: string
+          description: "6: 変更年月日 (YYYYMMDD)"
+        discontinued_date:
+          type: string
+          description: "7: 廃止年月日 (廃止されていない場合は99999999)"
 
     VisitingNursingFee:
       type: object
